kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alphabibber-gke-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: alphabibber-ingress-ip
    networking.gke.io/managed-certificates: alphabibber-cert2
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: GKE_FRONTEND_URL #gke.alphabibber.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: frontend-service
              servicePort: 80

#    - host: ${LANDINGPAGE_URL}
#      http:
#        paths:
#          - path: /*
#            backend:
#              serviceName: landingpage-service
#              servicePort: 80

#    - host: ${PRESENTATION_URL}
#      http:
#        paths:
#          - path: /*
#            backend:
#              serviceName: presentation-service
#              servicePort: 80

    - host: GKE_WEBSOCKET_URL #websocket.gke.alphabibber.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: websocket-service
              servicePort: 80

    - host: GKE_SPACES_URL #spaces.gke.alphabibber.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: spacesservice-service
              servicePort: 80

    - host: GKE_AUTH_URL
        http:
          paths:
              - path: /*
                backend:
                  serviceName: authservice-service
                  servicePort: 80
